test/compiler/pass/array.bt
int [] arr;
arr = [];
arr = [2, 4, 6, 8, 10];
int [] arr2 = [1, 2, 3];
print(arr[3]);
arr[3] = 9;
print(arr[3], " array is good\n");
print(arr2[2]);