test/compiler/fail/arrtypenotmatch.bt
int [] arr;
arr = [];
arr = ["hello"];
int [] arr2 = ["hello"];